# autonomous-incident-responder

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
agent/: slack_listener.py
agent/api/: main.py  main_cli.py
agent/core/: checkpointer.py  fix_format.py  fix_verifier.py  fixtures.py  graph.py  postmortem.py  ranking.py  state.py
agent/core/actions/: executors.py  registry.py
agent/core/slack/: blocks.py  client.py
agent/core/tools/: actions.py  commits.py  deploys.py  logs.py  metrics.py  runbooks.py
demo_target/: app.py  checkout.py  inject_bug.py  slo_watcher.py  state.py  traffic.py
docs/: DESIGN.md
eval/: harness.py  run_incident.py  run_scenario.py
eval/scenarios/scenario_01/: alert.json  deploys.json  error_samples.json  expected.json  metrics.json
eval/scenarios/scenario_02/: alert.json  deploys.json  error_samples.json  expected.json  metrics.json
eval/scenarios/scenario_03/: alert.json  deploys.json  error_samples.json  expected.json  metrics.json
eval/scenarios/scenario_04/: alert.json  deploys.json  error_samples.json  expected.json  metrics.json
runbooks/: cache-keyerror.md  downstream-provider-outage.md  pricing-calculation-errors.md  sort-field-mapping-errors.md
