[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-incident-responder"
version = "0.1.0"
description = "Autonomous AI agent that investigates production incidents: ranks likely culprit commits, retrieves runbooks, estimates impact, posts a Slack brief, and drafts a postmortem."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2",
    "python-dotenv>=1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["agent", "agent.*", "eval", "eval.*"]

[tool.pytest.ini_options]
pythonpath = ["."]
